<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/toolbar_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/toolbar_save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_undo"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/toolbar_undo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_redo"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/toolbar_redo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/drawer_settings"
        app:showAsAction="never" />

</menu>
